; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/ministat/extr_ministat.c_Max.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/ministat/extr_ministat.c_Max.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dataset = type { double*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (%struct.dataset*)* @Max to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @Max(%struct.dataset* %0) #0 {
  %2 = alloca %struct.dataset*, align 8
  store %struct.dataset* %0, %struct.dataset** %2, align 8
  %3 = load %struct.dataset*, %struct.dataset** %2, align 8
  %4 = getelementptr inbounds %struct.dataset, %struct.dataset* %3, i32 0, i32 0
  %5 = load double*, double** %4, align 8
  %6 = load %struct.dataset*, %struct.dataset** %2, align 8
  %7 = getelementptr inbounds %struct.dataset, %struct.dataset* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = sub nsw i32 %8, 1
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds double, double* %5, i64 %10
  %12 = load double, double* %11, align 8
  ret double %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
